# semfealumni.github.io

./: .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-pages.yml
FAQ/: index.html
archive/: index.html
blog/: index.html
blog/2024/02/11/10-years-semfealumni/: index.html
blog/2024/02/29/10-years-semfealumni-video/: index.html
blog/2024/10/02/gia-dimiourgia-mixanikoi_emfe-tee/: index.html
blog/2025/01/27/2025-kopi-pitas/: index.html
blog/2025/02/15/2025-tee-eidikotita/: index.html
blog/2025/03/02/2025-taktiki-gs/: index.html
blog/archive/2024/: index.html
blog/archive/2025/: index.html
blog/category/ανακοινώσεις/: index.html
blog/category/εκδηλώσεις/: index.html
contact/: index.html
docs/: FAQ.md  archive.md  contact.md  fotothiki.md  founding.md  governance.md  how_we_started.md  index.md  organa.md  professional_certification.md  support.md
docs/blog/: .authors.yml  index.md
docs/blog/posts/: example.md
docs/blog/posts/announcements/: 10-years-semfealumni-video.md  10-years-semfealumni-videos.md  2025-kopi-pitas.md  2025-taktiki-gs.md  2025-tee-eidikotita.md  gia-dimiourgia-mixanikoi_emfe-tee.md  pros-dimiourgia-mixanikoi_emfe-tee.md
docs/blog/posts/events/: 10-years-semfealumni.md
docs/blog/posts/events/10-years-semfealumni/: 10-years-semfealumni.md
docs/stylesheets/: style.css
fotothiki/: index.html
founding/: index.html
governance/: index.html
how_we_started/: index.html
organa/: index.html
overrides/: main.html
professional_certification/: index.html
search/: search_index.json
semfealumni/: __init__.py
stylesheets/: style.css
support/: index.html
