[project]
# Support Python 3.11+.
requires-python = ">=3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "semfealumni"
version = "2024.6.16"
description = ""
license = ""
package-mode = false
authors = []

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5"
mkdocs-material = { version = "^9.5", extras = ["imaging"] }
mkdocs-gen-files = "^0.5"
mkdocs-literate-nav = "^0.6"
mkdocs-section-index = "^0.3"
pymdown-extensions = "^10.7"
mkdocs-pdf = "^0.1"
mkdocs-rss-plugin = "^1.12"
